Balloon: Check WMI-Activity after restarting balloon service
Check for WMI-Activity Event ID 5858 since blnsvr.exe start.
Filter by ClientProcessId.
Use PS exit codes: 0=NONE, 1=HIT, 2=NO_PID.
Command configured in cfg.

id: 1315
Signed-off-by: Elizabeth Ashurov <eashurov@redhat.com>

--- a/qemu/tests/cfg/balloon_service.cfg
+++ b/qemu/tests/cfg/balloon_service.cfg
@@ -69,6 +69,7 @@
             only Windows
             repeat_times = 1
             blnsrv_operation = "stop run"
+            wmi_5858_check_cmd = "powershell -NoProfile -NonInteractive -ExecutionPolicy Bypass -Command \"$ErrorActionPreference='SilentlyContinue'; $log='Microsoft-Windows-WMI-Activity/Operational'; $p=(Get-Process -Name blnsvr -ErrorAction SilentlyContinue | Select-Object -First 1); if (-not $p) { Write-Output 'NO_PID'; exit 2 }; $blnPid=$p.Id; $start=$p.StartTime.ToUniversalTime(); $events = Get-WinEvent -FilterHashtable @{LogName=$log; Id=5858; StartTime=$start} -MaxEvents 50 -ErrorAction SilentlyContinue | Where-Object { $_.Level -eq 2 -and $_.Message -match ('ClientProcessId = ' + $blnPid) }; $e = $events | Select-Object -First 1; if ($null -ne $e) { Write-Output 'HIT'; ($e | Format-List -Property TimeCreated,Id,Message | Out-String).Trim() | Write-Output; exit 1 } else { Write-Output 'NONE'; exit 0 };\""
         - sc_interrogate:
             type = balloon_sc_interrogate
             only Windows
